@@ -1,3 +1,6 @@
+2020-03-28
+- Fix plain numbers bug #213
+
 2020-02-22
 - Release 1.6.19
 
